update docs for running executable jar